# ledger-cosmos

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .sonarcloud.properties  CMakeLists.txt  FYI.md  LICENSE  Makefile  README.md  TXSPEC.md  UISPEC.md  conanfile.txt  nanocli.sh  pkgdemo.sh  script.ld  sonar-project.properties
.circleci/: config.yml
.github/workflows/: check_version.yml  codeql.yml  codeql_checks.yml  guidelines_enforcer.yml  ledger.yml  main.yml  reusable_build.yml  sonarcloud.yml  swap-ci-workflow.yml
app/: .gitignore  LICENSE  Makefile  Makefile.version  script.ld  script_x.ld
app/src/: .gitignore  addr.c  addr.h  apdu_handler.c  chain_config.c  chain_config.h  coin.h  crypto.c  crypto.h  parser.c  parser_impl.c  parser_impl.h  parser_txdef.h  secret.c  secret.h  tx_display.c  tx_display.h  tx_parser.c  tx_parser.h  tx_validate.c  tx_validate.h  view_custom.c
app/src/cbor/: cbor_parser_helper.c  cbor_parser_helper.h
app/src/common/: actions.c  actions.h  app_main.c  app_main.h  app_mode.c  app_mode.h  main.c  parser.h  parser_common.h  tx.c  tx.h
app/src/json/: json_parser.c  json_parser.h
app/src/swap/: handle_check_address.c  handle_get_printable_amount.c  handle_sign_transaction.c  swap.h  swap_utils.c  swap_utils.h
cmake/Hunter/: config.cmake
cmake/conan/: CMakeLists.txt
cmake/gtest/: CMakeLists.txt  CMakeLists.txt.gtest.in
docs/: APDUSPEC.md  BUILD.md  PROTOSPEC.md  TXSPEC.md  UISPEC.md
fuzz/: parser_parse.cpp  run-fuzzers.py
fuzzing/: fuzzing.md  fuzzingMain.cpp  parser_parse.cpp
fuzzing/inputs/: input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input8.txt
fuzzing/scripts/: build.sh  login.sh  plot.sh  run.sh  run_slaves.sh
integration/: jest.config.js  package.json
integration/tests/: test.js
lib/: buffering.h
src/: .gitignore  actions.c  actions.h  app_main.c  app_main.h  common.h  crypto.c  crypto.h  glyphs.c  glyphs.h  json_parser.h  main.c  segwit_addr.c  signature.c  signature.h  transaction.c  transaction_parser.c  tx.c  tx.h  view.c  view.h  view_common.c  view_common.h  view_conf.c  view_conf.h  view_ctl.c  view_ctl.h  view_expl.c  view_expl.h  view_internal.h  view_s.c  view_templates.h  view_x.c
src/app/: main.cpp
src/goclient/: Gopkg.toml  goclient.go  goclient_test.go  run.sh  runtests.sh  samples.go  test.go  test.sh  update.sh
src/ledger/: Makefile  main.c  script.ld
src/ledger/src/: UI_templates.h  apdu_codes.h  app_main.c  app_main.h  common.h  glyphs.c  glyphs.h  main.c  signature.c  signature.h  transaction.c  transaction.h  ui.c  ui.h  ui_templates.h  view.c  view.h  view_templates.h
src/lib/: BoolExample.cpp  BoolExample.h  JsonParser.c  JsonParser.h  buffering.c  buffering.h  coin.h  cosmos.h  crypto.c  crypto.h  json_parser.c  json_parser.h  parser.c  parser.h  parser_common.h  parser_impl.c  parser_impl.h  parser_txdef.h  transaction.c  transaction.h  transaction_parser.c  transaction_parser.h  tx_display.c  tx_display.h  tx_parser.c  tx_parser.h  tx_validate.c  tx_validate.h
src/lib/json/: json_parser.c  json_parser.h  tx_display.c  tx_display.h  tx_parser.c  tx_parser.h  tx_validate.c  tx_validate.h
test/: testutil.h
tests/: JsonParserTests.cpp  asciify.cpp  buffering_tests.cpp  common.cpp  common.h  example.cpp  json_parser.cpp  json_parser_tests.cpp  testcases.cpp  testcases.h  transaction_parser_tests.cpp  tx_parse.cpp  tx_validate.cpp  ui_output.cpp  ui_tests.cpp
tests/testcases/: manual.json  textual.json
tests/util/: common.cpp  common.h  testcases.cpp  testcases.h
tests_zemu/: .gitignore  eslint.config.js  jest.config.js  package.json
tests_zemu/tests/: amino.test.ts  common.ts  json.test.ts  keplr.test.ts  pullImageKillOld.ts  standard.test.ts  test.js  textual.test.ts
tests_zemu/tools/: debug.mjs
tools/: build_samples.sh  fix_submodules.sh  notes.md  samples.go  test.py
